# eeg-transformer

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
configs/: config.yaml
eegformer/: augmentation.py  augmentations.py  datamodule.py  main.py  utils.py
eegformer/dataset/: __init__.py  physionet_motor_imagery.py
eegformer/datasets/: __init__.py  dataset.py  physionet_motor_imagery.py
eegformer/model/: transformer.py
eegformer/models/: transformer.py  utils.py
eegt/: augmentation.py  dataset.py  model.py  utils.py
eegt/modules/: base.py  masking.py  simclr.py  simsiam.py  supervised.py
eegt/scripts/: attention.py  combine_data.py  download_data.py  raw2latent.py  rename.py  train.py
notebooks/: AttentionFigures.ipynb  LatentSpace.ipynb
src/: attention.py  augmentation.py  data.py  dataset.py  download_data.py  module.py  raw2latent.py  rename.py  train.py
src/eegformer/: augmentations.py  main.py  utils.py
src/eegformer/datasets/: dataset.py  physionet_motor_imagery.py
src/eegformer/models/: __init__.py  transformer.py
