[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["eegformer"]

[tool.setuptools.packages.find]
where = ["."]
include = ["eegformer.*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.black]
line-length = 120

[project]
name = "eegformer"
dynamic = ["dependencies"]
version = "0.1.0"
